--- a/docs/stylehome.css
+++ b/docs/stylehome.css
@@ -153,7 +153,7 @@ ion-icon.green
     display: flex;
     align-items: center;
 }
-.detais .imgBx
+.inner-home .imgBx
 {
     width: 0px;
     position: relative;
