--- a/CSS/LockScreen.css
+++ b/CSS/LockScreen.css
@@ -6,13 +6,15 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body 
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: #fff;
+body {
+  background: #000;
+  color: #fff;
+  font-family: sans-serif;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 .box 
 {
@@ -34,7 +36,7 @@ body
 {
     position: absolute;
     inset: 3px;
-    background: url(bg.jpg);
+    background: url(/IMG/bg.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 48px;
@@ -128,17 +130,17 @@ ion-icon.green
     opacity: 1;
     transition-delay: 0.25s;
 }
-.btn
-{
-    position: absolute;
-    top: 130px;
-    left: -2px;
-    width: 3px;
-    height: 40px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    background: radial-gradient(#ccc, #666, #222);
-    z-index: 10;  
+.btn {
+  position: absolute;
+  top: 130px;
+  left: -2px;
+  width: 3px;
+  height: 40px;
+  border-radius: 4px;
+  background: radial-gradient(#ccc, #666, #222);
+  z-index: 10;
+  transform: rotate(0deg); /* tilt the button */
+  transform-origin: center;
 }
 .btn2
 {
@@ -180,15 +182,7 @@ ion-icon.green
     overflow: hidden;
     transition: 0.5s;
 }
-body 
-{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #111;
-}
-.home-btn
+.island_bottom 
 {
     position: absolute;
     top: 560px;
@@ -201,7 +195,7 @@ body
     justify-content: space-between;
     align-items: center;   
 }
-.home-btn:hover
+.island_bottom:hover
 {
     position: absolute;
     top: 560px;
@@ -232,6 +226,7 @@ body
     justify-content: space-between;
     align-items: center;   
 }
+/* ========== APP GRID ========== */
 .app-grid 
 {
   position: absolute;
@@ -287,21 +282,11 @@ body
      font-weight: 5002;
     opacity: 0.8;
 }
-body {
-  background: #000;
-  color: #fff;
-  font-family: sans-serif;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
 .inner-home
 {
     position: absolute;
     inset: 3px;
-    background: url(bg.jpg);
+    background: url(/IMG/bg.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 48px;
@@ -310,14 +295,4 @@ body {
     justify-content: center;
     opacity: 1;
     transition: 0.5s;
-}
-.app-header
-{
-    position: absolute;
-    top: 20px;
-}
-.app-body
-{
-    position: absolute;
-    top: 100px;
 }
