--- a/CSS/TikTok.css
+++ b/CSS/TikTok.css
@@ -36,7 +36,7 @@ body {
 {
     position: absolute;
     inset: 3px;
-    background: url(bg.jpg);
+    background: url(/IMG/bg.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 48px;
@@ -130,17 +130,17 @@ ion-icon.green
     opacity: 1;
     transition-delay: 0.25s;
 }
-.btn
-{
-    position: absolute;
-    top: 130px;
-    left: -2px;
-    width: 3px;
-    height: 40px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    background: radial-gradient(#ccc, #666, #222);
-    z-index: 10;  
+.btn {
+  position: absolute;
+  top: 130px;
+  left: -2px;
+  width: 3px;
+  height: 40px;
+  border-radius: 4px;
+  background: radial-gradient(#ccc, #666, #222);
+  z-index: 10;
+  transform: rotate(0deg); /* tilt the button */
+  transform-origin: center;
 }
 .btn2
 {
@@ -193,7 +193,12 @@ ion-icon.green
     transition: 0.3s ease-in-out;
     display: flex;
     justify-content: space-between;
-    align-items: center;   
+    align-items: center;  
+    display:block;
+    border:0 none;
+    cursor:pointer;
+    outline: none;
+    box-shadow: white;  
 }
 .island_bottom:hover
 {
@@ -208,85 +213,11 @@ ion-icon.green
     justify-content: space-between;
     align-items: center;   
 }
-.content2
-{
-    display:block;
-    border:0 none;
-    cursor:pointer;
-    outline:none;
-    cursor: pointer;
-    top: 560px;
-    width: 90px;
-    height: 7px;
-    background: gray;
-    border-radius: 20px;
-    box-shadow: white;
-    transition: 0.3s ease-in-out;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;   
-}
-/* ========== APP GRID ========== */
-.app-grid 
-{
-  position: absolute;
-  top: 150px;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 25px 0;
-  justify-items: center;
-}
-
-.app 
-{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #fff;
-  transition: transform 0.3s ease;
-  cursor: pointer;
-  font-size: 0.8em;
-}
-.app ion-icon 
-{
-  font-size: 30px;
-  background: rgba(255, 255, 255, 0.15);
-  padding: 10px;
-  border-radius: 12px;
-  backdrop-filter: blur(8px);
-  margin-bottom: 4px;
-  transition: 0.3s ease;
-}
-.time-container 
-{
-    position: absolute;
-    top: 90px;
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    z-index: 5;
-    font-family: 'Poppins', sans-serif;
-}
-.time-container #time 
-{
-    font-size: 5.5em;
-    position: relative;
-    top: -25px;
-    font-weight: 500;
-    letter-spacing: 0.5px;
-}
-.time-container #date 
-{
-    font-size: 1.1em;
-     font-weight: 5002;
-    opacity: 0.8;
-}
 .inner-home
 {
     position: absolute;
     inset: 3px;
-    background: url(bg.jpg);
+    background: url(/IMG/bg.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 48px;
