--- a/CSS/wheather.css
+++ b/CSS/wheather.css
@@ -14,19 +14,18 @@ h1
     position: relative;
     align-items: center;
     top: 160px;
-    width: 100%; /* Or any specific width */
-    margin: 0 auto; /* Top/bottom margin 0, left/right auto */
+    width: 100%; 
+    margin: 0 auto;
 }
 
 
 
-/* Center and position title close to the island */
 .wheather-Name {
-  position: relative;  /* let it flow naturally */
+  position: relative;  
   width: 100%;
   text-align: center;
   margin-top: 20px;
-  margin-bottom: 0px; /* space between title and grid */
+  margin-bottom: 0px;
 }
 
 .scroll-container {
@@ -36,7 +35,6 @@ h1
   padding: 0 20px;
   box-sizing: border-box;
 
-  /* fade effect */
   -webkit-mask-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,1) 10%, rgba(0,0,0,1) 90%, rgba(0,0,0,0));
   -webkit-mask-repeat: no-repeat;
   -webkit-mask-size: 100% 100%;
@@ -64,13 +62,13 @@ h1
   margin: 0px;
 }
 
-/* Adjust grid so it sits lower after the title */
+
 .app-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 12px;
   justify-items: center;
-  margin-top: 5px; /* moves grid lower so it doesn't overlap title */
+  margin-top: 5px;
 }
 
 
@@ -243,7 +241,7 @@ ion-icon.green
   border-radius: 4px;
   background: radial-gradient(#ccc, #666, #222);
   z-index: 10;
-  transform: rotate(0deg); /* tilt the button */
+  transform: rotate(0deg); 
   transform-origin: center;
 }
 .btn2
@@ -326,8 +324,8 @@ ion-icon.green
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start; /* align items from the top */
-  padding-top: 30px; /* distance from the very top edge */
+  justify-content: flex-start; 
+  padding-top: 30px;
   overflow: hidden;
 }
 
